[gd_scene load_steps=4 format=3 uid="uid://felkbrb8wl0b"]

[ext_resource type="Script" uid="uid://bwq1053jfqrkm" path="res://UI/Scripts/PlanetIntroUI.gd" id="1_bkp16"]
[ext_resource type="Theme" uid="uid://c720yo72r5nrm" path="res://UI/Themes/DefaultTheme.theme" id="2_25bl3"]
[ext_resource type="Texture2D" uid="uid://450he1vknokb" path="res://Assets/Planet Assets/Large Planets 512x512/Solid/Snowy/Snowy_01-512x512.png" id="3_25bl3"]

[node name="PlanetIntroUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_bkp16")

[node name="Blackout" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="VBoxParent" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 1080)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlanetName" type="RichTextLabel" parent="VBoxParent"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_25bl3")
theme_override_colors/default_color = Color(0.0627451, 0.9019608, 0.81960785, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Planet Name"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxParent"]
layout_mode = 2

[node name="PlanetType" type="RichTextLabel" parent="VBoxParent/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_25bl3")
theme_override_colors/default_color = Color(0.0627451, 0.9019608, 0.81960785, 1)
theme_override_font_sizes/normal_font_size = 80
text = "Planet Type"
fit_content = true
horizontal_alignment = 1

[node name="Spacer" type="HBoxContainer" parent="VBoxParent/VBoxContainer2"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxParent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlanetImage" type="TextureRect" parent="VBoxParent/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_25bl3")
